5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1601_1801.log
== TEST (2019-03-22 10:56:45) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lançar o feitico")
y=char(input("Digite o nome do objeto"))		
-- ERROR:
File "XXXX", line 2
    y=char(input())		
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:57:04) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lançar o feitico")
y=input("Digite o nome do objeto")
-- ERROR:
File "XXXX", line 2
    y=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:58:58) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lançar o feitico"))
y=input("Digite o nome do objeto")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 10:59:11) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:00:21) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")

print("Abra+y"*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:01:03) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")

print("Abra"+y*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:01:35) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")

print(("Abra"+y)*x)
-- EXECUTION TIME:
0.206474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:01:38) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")

print(("Abra"+y)*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:02:27) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")

print(("Abra "+y)*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:02:43) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")

print(("Abra "+y )*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:02:58) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")

print((" Abra "+y)*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:03:09) 
-- CODE:
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
y=input("Digite o nome do objeto")

print((" Abra "+y)*x)
-- EXECUTION TIME:
0.143224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 11:03:27) 
-- CODE:
y=input("Digite o nome do objeto")
x=int(input("Digite a quantidade de vezes que deseja lancar o feitico"))
print((" Abra "+y)*x)
-- EXECUTION TIME:
0.212084
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
